fix: tabs close icon not centered

--- a/src/design/ant/index.less
+++ b/src/design/ant/index.less
@@ -18,7 +18,8 @@ span.anticon:not(
     .anticon-info-circle,
     .anticon-close-circle,
     .anticon-exclamation-circle,
-    .anticon-loading
+    .anticon-loading,
+    .anticon-close
   ) {
   vertical-align: 0.125em !important;
 }
